--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  font-family: roboto,sans-serif;
+}
+
+/* ============================================================
+  Universal Styles
+============================================================ */
+.color-default { color: #b0984d; }
+.background-color-default { background-color: #b0984d; }
+.button-color-default{
+  background-color: #b0984d;
+  border-color: #b0984d;
+}
+
+.space-top-40 { padding-top: 40px; }
+.space-bottom-40 { margin-bottom: 40px !important; }
+
+.padding-top-10px { padding-top: 10px; }
+.padding-top-20px { padding-top: 20px; }
