Added lifetime component.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
       <p>Vivamus suscipit tortor eget felis porttitor volutpat. Vestibulum ac diam sit amet quam vehicula elementum sed sit
         amet dui. Vivamus suscipit tortor eget felis porttitor volutpat.</p>
 
-      <div class="col-md-10 offset-md-2 padding-top-20px">
+      <div class="col-xs-12 col-lg-10 offset-lg-2 padding-top-20px">
         <div class="row">
           <div class="col-lg-12">
             <a href="#" class="btn btn-primary button-color-default">Subscribe</a> &nbsp;&nbsp;&nbsp;3 Month Subscription
@@ -43,7 +43,7 @@
       </p>
 
       <div class="text-center">
-        <a href="lifetime.php" class="btn btn-primary button-color-default"><i class="fa fa-user pr-10"></i> Lifetime Subscription</a>
+        <a routerLink="/lifetime" class="btn btn-primary button-color-default"><i class="fa fa-user padding-right-10px"></i> Lifetime Subscription</a>
       </div>
     </div><!-- .col -->
   </div>
