--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,4 @@ body {
 
 .padding-top-10px { padding-top: 10px; }
 .padding-top-20px { padding-top: 20px; }
+.padding-right-10px { padding-right: 10px; }
