--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,19 +9,19 @@
       <div class="col-xs-12 col-lg-10 offset-lg-2 padding-top-20px">
         <div class="row">
           <div class="col-lg-12">
-            <a href="#" class="btn btn-primary button-color-default">Subscribe</a> &nbsp;&nbsp;&nbsp;3 Month Subscription
+            <a href="#" class="btn btn-primary button-color-default"><i class="fa fa-user padding-right-10px"></i> Subscribe</a> <span class="padding-left-10px">3 Months Subscription</span>
           </div><!-- .col -->
         </div><!-- .row -->
 
         <div class="row padding-top-10px">
           <div class="col-lg-12">
-            <a href="#" class="btn btn-primary button-color-default">Subscribe</a> &nbsp;&nbsp;&nbsp;6 Month Subscription
+              <a href="#" class="btn btn-primary button-color-default"><i class="fa fa-user padding-right-10px"></i> Subscribe</a> <span class="padding-left-10px">6 Months Subscription</span>
           </div><!-- .col -->
         </div><!-- .row -->
 
         <div class="row padding-top-10px">
             <div class="col-lg-12">
-              <a href="#" class="btn btn-primary button-color-default">Subscribe</a> &nbsp;&nbsp;&nbsp;12 Month Subscription
+                <a href="#" class="btn btn-primary button-color-default"><i class="fa fa-user padding-right-10px"></i> Subscribe</a> <span class="padding-left-10px">12 Months Subscription</span>
             </div><!-- .col -->
           </div><!-- .row -->
       </div><!-- .col -->
