--- a/src/styles.css
+++ b/src/styles.css
@@ -17,4 +17,5 @@ body {
 
 .padding-top-10px { padding-top: 10px; }
 .padding-top-20px { padding-top: 20px; }
+.padding-left-10px { padding-left: 10px; }
 .padding-right-10px { padding-right: 10px; }
