iframe subscription implemented

--- a/src/app/lifetime/lifetime.component.html
+++ b/src/app/lifetime/lifetime.component.html
@@ -1,3 +1,126 @@
-<p>
-  lifetime works!
-</p>
+
+<div class="col-md-12">
+<h1 class="text-center red-font">Lifetime Memberships are Available!</h1>
+<h3 class="text-center">Call StagedHomes.com at 1-800-392-7161</h3>
+<h2 class="text-center space-bottom-40 gold-font">Membership Renewal</h2>
+
+
+<p class="lead"><strong>Order Information</strong></p>
+<hr />
+
+<div class="clearfix space-bottom-40">
+    <div class="col-md-8">
+        <p class="lead"><strong>Description</strong></p>
+        <p class="lead">Renewal ASP<sup>®</sup> Stager 100 Years<br />
+            Stager ASP<sup>®</sup> 100 Years Membership All Benefits</p> 
+    </div>
+    <div class="col-md-2">
+        <p class="lead"><strong>Qty</strong></p>
+        <p class="lead">1</p>
+    </div>
+    <div class="col-md-2">
+        <p class="lead"><strong>Unit Price</strong></p>
+        <p class="lead">US $2295.95</p>
+    </div>
+</div>
+
+<form action="">
+    <div class="row">
+        <div class="col-md-6 space-bottom-40">
+            <p class="lead"><strong>Payment Information</strong></p>
+            <hr />            
+            
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label for="inputFirstName"><strong>First Name</strong></label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="inputLastName"><strong>Last Name</strong></label>
+                    <input type="text" class="form-control">
+                </div>
+            </div>
+            
+            <div class="row">
+                <div class="form-group col-md-4">
+                    <label for="inputCity"><strong>City</strong></label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="inputStateProvince"><strong>State / Province</strong></label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="inputZip"><strong>Zip</strong></label>
+                    <input type="text" class="form-control">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="form-group col-md-12">
+                    <label for="inputCountry"><strong>Country</strong></label>
+                    <input type="text" class="form-control">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="form-group col-md-12">
+                    <label for="exampleInputEmail1"><strong>Email Address</strong></label>
+                    <input type="email" class="form-control">
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-6 space-bottom-40">
+            <p class="lead"><strong>Billing Information</strong></p>
+            <hr />
+
+            <div class="row">
+                <div class="form-group col-md-12">
+                    <label for="inputCardNumber"><strong>Card Number</strong></label>
+                    <input type="text" class="form-control">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label for="inputExpMonth"><strong>Expiration Month</strong></label>
+                    <select class="form-control">
+                        <option>Select a month</option>
+                        <option>January (1)</option>
+                        <option>February (2)</option>
+                        <option>March (3)</option>
+                        <option>April (4)</option>
+                        <option>May (5)</option>
+                        <option>June (6)</option>
+                        <option>July (7)</option>
+                        <option>August (8)</option>
+                        <option>September (9)</option>
+                        <option>October (10)</option>
+                        <option>November (11)</option>
+                        <option>December (12)</option>
+                    </select>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="inputExpYear"><strong>Expiration Year</strong></label>
+                    <input type="text" class="form-control" placeholder="e.g. 1999">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="form-group col-md-12">
+                    <label for="inputCardCode"><strong>Card Code</strong></label>
+                    <input type="text" class="form-control">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="text-center">
+        <a routerLink="/" class="btn btn-animated btn-lg btn-danger">Cancel <i class="fa fa-times"></i></a>
+        <a href="#" class="btn btn-animated btn-lg btn-success space-left-5">Confirm <i class="fa fa-check"></i></a>
+    </div>
+
+</form>
+</div>
