iframe is responsive now

--- a/src/app/lifetime/lifetime.component.html
+++ b/src/app/lifetime/lifetime.component.html
@@ -8,7 +8,7 @@
 <p class="lead"><strong>Order Information</strong></p>
 <hr />
 
-<div class="clearfix space-bottom-40">
+<div class="row space-bottom-40">
     <div class="col-md-8">
         <p class="lead"><strong>Description</strong></p>
         <p class="lead">Renewal ASP<sup>®</sup> Stager 100 Years<br />
