--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
   <div class="row">
     <div class="col-md-6">
       <h3 class="text-center">ASP<sup>®</sup> Subscription</h3>
@@ -46,5 +46,5 @@
         <a routerLink="/lifetime" class="btn btn-primary button-color-default"><i class="fa fa-user padding-right-10px"></i> Lifetime Subscription</a>
       </div>
     </div><!-- .col -->
-  </div>
+  </div><!-- .row -->
 </div>
